# flo_draw

./: .gitignore  Cargo.toml  README.md  THANKS.md
canvas/: Cargo.toml  README.md
canvas/src/: canvas.rs  canvas_stream.rs  color.rs  context.rs  decoding.rs  draw.rs  draw_resource.rs  draw_stream.rs  drawing_context.rs  drawing_target.rs  encoding.rs  font.rs  font_face.rs  font_line_layout.rs  gc.rs  gradient.rs  lib.rs  namespace.rs  path.rs  primitives.rs  sprite.rs  texture.rs  transform2d.rs
canvas/src/conversion_streams/: dashed_lines.rs  font_state.rs  glyph_layout.rs  mod.rs  outline_fonts.rs  path_stream.rs
canvas/src/scenery/: drawing_request.rs  mod.rs  sprite_properties.rs
canvas/test_data/: Lato-license.md
canvas/tests/: readme.rs
canvas_events/: Cargo.toml
canvas_events/src/: draw_event.rs  draw_event_request.rs  draw_window_request.rs  drawing_request.rs  key.rs  lib.rs  pointer_event.rs  render_request.rs
draw/: Cargo.toml  GUIDE.md  README.md
draw/examples/: bounce.rs  bounce_sprites.rs  canvas_window.rs  circle.rs  clip.rs  dashed_line.rs  erase.rs  follow_mouse.rs  gradient.rs  hello_world.rs  layer_alpha.rs  mandelbrot.rs  mascot.rs  mascot_dynamic_texture.rs  mascot_filter.rs  mascot_shadow.rs  mascot_sprite.rs  mascot_texture.rs  mirror_windows.rs  render_window.rs  render_window_double_resolve.rs  show_tessellation.rs  show_text_tessellation.rs  sprite.rs  text_layout.rs  texture.rs  texture_filters.rs  texture_from_sprite.rs  texture_from_sprite_dynamic.rs  texture_spin.rs  texture_sprites.rs  update_title.rs  vectoroids.rs  wibble.rs  wibble_dynamic_mascot.rs  wibble_mascot.rs
draw/src/: canvas_window.rs  draw_event.rs  drawing_window.rs  event_conversion.rs  glutin_runtime.rs  glutin_thread.rs  glutin_thread_event.rs  glutin_window.rs  lib.rs  render_window.rs  window_properties.rs
draw/src/draw_scene/: draw_event_request.rs  draw_window_request.rs  drawing_request.rs  drawing_window_entity.rs  drawing_window_program.rs  glutin_render_window_entity.rs  glutin_render_window_program.rs  glutin_scene.rs  mod.rs  render_request.rs  render_window_entity.rs  render_window_program.rs  scene.rs  wgpu_render_window_entity.rs  wgpu_render_window_program.rs  wgpu_scene.rs
draw/src/events/: draw_event.rs  key.rs  keypress.rs  mod.rs  pointer_event.rs
draw/src/glutin/: event_conversion.rs  glutin_runtime.rs  glutin_thread.rs  glutin_thread_event.rs  glutin_window.rs  mod.rs
draw/src/wgpu/: event_conversion.rs  mod.rs  winit_runtime.rs  winit_thread.rs  winit_thread_event.rs  winit_window.rs
draw/tests/: readme.rs
draw_glutin/: Cargo.toml
draw_glutin/src/: drawing_window.rs  glutin_runtime.rs  glutin_thread.rs  glutin_window.rs  render_window.rs
render/: Cargo.toml  build.rs
render/bindings/: metal_bindings.h
render/examples/: raw_wgpu_winit_circle.rs  raw_wgpu_winit_triangle.rs
render/shaders/dashed_line/: dashed_line.glslf
render/shaders/filters/: alpha_blend.glslf  alpha_blend.wgsl  blur_29.glslf  blur_5.glslf  blur_61.glslf  blur_9.glslf  blur_fixed.wgsl  blur_texture.glslf  blur_texture.wgsl  displacement.glslf  displacement.wgsl  mask.glslf  mask.wgsl  premultiply.glslf  reduce.wgsl
render/shaders/simple/: alpha_no_premultiply.wgsl  alpha_premultiply.wgsl  clip_mask.metal  clip_mask.wgsl  clip_none.wgsl  color_invert_alpha.wgsl  color_multiply_alpha.wgsl  color_no_post_processing.wgsl  eraser.metal  multisample_resolve_4.glslf  postprocessing.metal  rasterizer.metal  resolve.glslv  simple.glslf  simple.glslv  simple.metal  simple.wgsl  texture_fragment.metal
render/shaders/texture/: alpha_no_premultiply.wgsl  alpha_premultiplied.wgsl  gradient.glslf  gradient.glslv  gradient.metal  gradient.wgsl  gradient_fragment.metal  texture.glslf  texture.glslv  texture.wgsl  texture_fragment.metal  texture_multisample.wgsl  texture_none.wgsl  texture_pos_input.wgsl  texture_pos_separate.wgsl  texture_sampler.wgsl
render/src/: lib.rs  profiler.rs
render/src/action/: blend_mode.rs  identities.rs  mod.rs  render_action.rs  render_action_type.rs  shader_type.rs  texture_filter.rs
render/src/buffer/: matrix.rs  vertex.rs
render/src/gl_renderer/: error.rs  gl_renderer.rs  mod.rs  render_target.rs  renderer.rs  shader.rs  shader_collection.rs  shader_program.rs  shader_uniforms.rs  standard_shader_programs.rs  texture.rs
render/src/metal_renderer/: matrix_buffer.rs  metal_renderer.rs  pipeline_configuration.rs
render/src/offscreen/: metal.rs  mod.rs  opengl_cgl_init.rs  (+4 more)
render_canvas/: Cargo.toml
render_canvas/examples/: guide_illustrations.rs  png_mascot.rs  png_triangle.rs  raw_wgpu_winit.rs
render_canvas/src/: canvas_renderer.rs  dynamic_texture_state.rs  fill_state.rs  layer_bounds.rs  layer_handle.rs  layer_state.rs  lib.rs  matrix.rs  offscreen.rs  render_entity.rs  render_entity_details.rs  render_gradient.rs  render_texture.rs  renderer_core.rs  renderer_layer.rs  renderer_stream.rs  renderer_worker.rs  resource_ids.rs  texture_filter_request.rs  texture_render_request.rs
render_canvas/tests/: render_tests.rs
render_software/: Cargo.toml
render_software/examples/: blank_rectangles.rs  circle_to_png.rs  mascot.rs  render_canvas_drawing.rs  software_basic.rs  software_dynamic_sprite.rs  software_gradient.rs  software_mascot.rs  software_mascot_sprite.rs  software_mascot_texture.rs  software_render_perf.rs  software_sprite.rs  software_text_layout.rs  software_texture.rs  software_texture_filters.rs  software_texture_scaling.rs  software_texture_transform.rs
render_software/src/: lib.rs  pixel_program.rs  pixel_program_cache.rs
render_software/test_data/: Lato-license.md
render_software/tests/: bezier_subpath_edge_tests.rs  canvas_render_tests.rs  clip_edge_tests.rs  edge_plan_render_tests.rs  f32_linear_pixel_tests.rs  filter_tests.rs  mascot_tests.rs  pixel_planner_tests.rs  polyline_edge_tests.rs  scanline_plan_tests.rs  shard_scan_planner_tests.rs  shard_tests.rs  texture_tests.rs  u32_linear_pixel_tests.rs
wasm/wasm_canvas_test/: Cargo.toml
winit_test/: Cargo.toml
winit_test/src/: main.rs
(+145 files in other folders)
