[workspace]
members = [
    "canvas", 
    "canvas_events",
    "render", 
    "render_canvas",
    "render_gl_offscreen",
    "draw",
    "draw_glutin"
]

[patch.crates-io]
flo_canvas              = { path = "./canvas" }
flo_canvas_events       = { path = "./canvas_events" }
flo_render              = { path = "./render" }
flo_render_canvas       = { path = "./render_canvas" }
flo_render_gl_offscreen = { path = "./render_gl_offscreen" }
flo_draw                = { path = "./draw" }
flo_draw_glutin         = { path = "./draw_glutin" }

# allsorts is very slow when built for debug, so packages using flo_draw should consider optimising it even in debug builds
[profile.dev.package.allsorts]
opt-level = 2
