[package]
name                = "flo_canvas"
version             = "0.3.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
readme              = "README.md"
categories          = [ "graphics", "rendering::data-formats" ]
repository          = "https://github.com/Logicalshift/flo_draw"
description         = "Library for describing graphics context drawing actions without requiring a specific implementation"

include             = [ "Cargo.toml", "src/**/*", "test_data/**/*", "README.md" ]

[features]
outline-fonts       = [ "allsorts", "ttf-parser", "flo_stream", "pathfinder_geometry" ]

[dependencies]
flo_curves          = "0.4"
flo_stream          = { version = "0.6", optional = true }

futures             = "0.3"
desync              = "0.7"
rust-hsluv          = "0.1"
itertools           = "0.10"
serde               = { version = "1.0", features = [ "rc" ] }
serde_derive        = "1.0"
allsorts            = { version = "0.5", optional = true }
ttf-parser          = { version = "0.12", optional = true }
pathfinder_geometry = { version = "0.5", optional = true }

[dev-dependencies]
serde_json          = "1.0"
