[package]
name                = "flo_canvas"
version             = "0.4.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
readme              = "README.md"
categories          = [ "graphics", "rendering::data-formats" ]
repository          = "https://github.com/Logicalshift/flo_draw"
description         = "Library for describing graphics context drawing actions without requiring a specific implementation"

include             = [ "Cargo.toml", "src/**/*", "test_data/**/*", "README.md" ]

[features]
outline-fonts       = [ "allsorts", "ttf-parser", "pathfinder_geometry" ]
image-loading       = [ "image" ]
scenery             = [ "flo_scene" ]

[dependencies]
flo_curves          = "0.8"
flo_stream          = "0.7"
flo_scene           = { version = "0.1", optional = true }
uuid                = { version = "1.0", features = [ "v4" ] }

futures             = "0.3"
desync              = "0.9"
lazy_static         = "1.4"
rust-hsluv          = "0.1"
itertools           = "0.11"
serde               = { version = "1.0", features = [ "rc" ] }
serde_derive        = "1.0"
allsorts            = { version = "0.14", optional = true }
ttf-parser          = { version = "0.19", optional = true }
pathfinder_geometry = { version = "0.5", optional = true }
image               = { version = "0.24", optional = true }
smallvec            = "1.6"
ouroboros           = "0.17"

[dev-dependencies]
serde_json          = "1.0"
