[package]
name                = "flo_draw"
version             = "0.4.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
readme              = "README.md"
repository          = "https://github.com/Logicalshift/flo_draw"
description         = "Hassle-free windowed 2D graphics rendering"
categories          = [ "graphics", "rendering", "gui" ]

include             = [ "Cargo.toml", "src/**/*", "examples/**/*", "images/**/*", "guide_images/**/*", "GUIDE.md", "README.md" ]

[features]
default             = [ "render-opengl" ]
render-opengl       = [ "gl", "glutin", "winit", "glutin-winit", "raw-window-handle", "flo_render/opengl" ]
render-wgpu         = [ "winit", "wgpu", "flo_render/render-wgpu" ]
profile             = [ "flo_render/profile" ]
wgpu-profiler       = [ "dep:wgpu-profiler", "flo_render/wgpu-profiler" ]

[dependencies]
flo_canvas          = { version = "0.4", features = [ "outline-fonts", "image-loading", "scenery" ] }
flo_canvas_events   = { version = "0.4" }
flo_render          = { version = "0.4", features = [ "opengl" ] }
flo_render_canvas   = "0.4"
flo_stream          = "0.7"
flo_binding         = "3.0"
flo_scene           = "0.2"
desync              = "0.9"

once_cell           = "1.18"
futures             = "0.3"

glutin              = { optional = true, version = "0.31.0" }
glutin-winit        = { optional = true, version = "0.4.0" }
raw-window-handle   = { optional = true, version = "0.6" }
gl                  = { optional = true, version = "0.14" }

winit               = { optional = true, version = "0.29" }
wgpu                = { optional = true, workspace = true }
wgpu-profiler       = { workspace = true, optional = true }

[dev-dependencies]
flo_curves          = "0.8"
rand                = "0.8"
futures-timer       = "3.0"
num-complex         = "0.4"
rayon               = "1.5"
