[package]
name                = "flo_draw_glutin"
version             = "0.3.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
repository          = "https://github.com/Logicalshift/flo_draw"
description         = "flo_draw implemented using glutin as a backend"
categories          = [ "graphics", "rendering", "gui" ]

[dependencies]
flo_canvas          = { version = "0.3", features = [ "outline-fonts", "image-loading" ] }
flo_canvas_events   = { version = "0.3" }
flo_render          = { version = "0.3", features = [ "opengl" ] }
flo_render_canvas   = "0.3"
flo_stream          = "0.6"
flo_binding         = "2.0"
desync              = "0.7"

glutin              = "0.26.0"
lazy_static         = "1.2"
futures             = "0.3"
gl                  = "0.14"

[dev-dependencies]
flo_curves          = "0.5"
rand                = "0.8"
futures-timer       = "3.0"
num-complex         = "0.4"
