[package]
name        = "flo_render"
version     = "0.3.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Streaming API for rendering graphics on hardware"
categories  = [ "graphics", "rendering", "rendering::graphics-api" ]

include     = [ "Cargo.toml", "src/**/*", "shaders/**/*", "bindings/**/*", "build.rs" ]

[features]
opengl      = [ "gl", "libc", "flo_render_gl_offscreen" ]
osx-metal   = [ "metal", "cocoa", "flo_canvas" ]

[build-dependencies]
bindgen = "0.54"

[dependencies]
gl                      = { version = "0.14", optional = true }
metal                   = { version = "0.23", optional = true }
cocoa                   = { version = "0.23", optional = true }
libc                    = { version = "0.2", optional = true }
flo_canvas              = { version = "0.3", optional = true }
flo_render_gl_offscreen = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation         = "0.9"
