[package]
name        = "flo_render_canvas"
version     = "0.3.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flo_draw"
description = "Converts flo_canvas streams to flo_render streams"
categories  = [ "graphics", "rendering", "rendering::engine" ]

include     = [ "Cargo.toml", "src/**/*", "svg/**/*" ]

[dependencies]
flo_render  = "0.2"
flo_canvas  = "0.2"
flo_stream  = "0.6"
futures     = "0.3"
desync      = "0.7"
lyon        = "0.15"
num_cpus    = "1.13"

[dev-dependencies]
png         = "0.11"
