[package]
name                = "flo_render_software"
version             = "0.4.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
readme              = "README.md"
repository          = "https://github.com/Logicalshift/flo_draw"
description         = "Software renderer for flo_canvas vector graphics"
categories          = [ "graphics", "rendering", "gui" ]

[features]
default             = [ "render_png", "render_term", "multithreading" ]
render_png          = [ "png" ]
render_term         = [ "render_png", "base64" ]
multithreading      = [ "rayon" ]

[dependencies]
once_cell           = "1.18"
smallvec            = "1.11"
wide                = "0.7"
flo_canvas          = "0.4"
flo_sparse_array    = "0.1"
itertools           = "0.11"
png                 = { version = "0.17", optional = true }
base64              = { version = "0.21", optional = true }
rayon               = { version = "1.7", optional = true }

[dev-dependencies]
flo_canvas          = { version = "0.4", features = ["image-loading"] }
