[package]
name        = "flo_winit_test"
version     = "0.1.0"
edition     = "2021"
resolver    = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flo_render  = { version = "0.4", features = [ "render-wgpu" ] }
winit       = "0.26"
wgpu        = "0.13"
futures     = "0.3"
